test/netlist/error/any-param.bop
A[_](a) = b
where
  b = Not(a);
end where;

Main(a) = b
where
  b = A[0](a);
end where;
